<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimaryDark"
            tools:context=".MainActivity5">

            <TextView
                android:id="@+id/textViewMA5"

                android:layout_width="326dp"
                android:layout_height="wrap_content"

                android:text="@string/m5_text"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/cardview_light_background"
                android:textStyle="bold"

                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"

                app:layout_constraintHorizontal_bias="0.4"
                app:layout_constraintVertical_bias="0.024"

                tools:text="@string/m5_text" />

            <TextView
                android:id="@+id/textViewM3_1"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginTop="32dp"

                android:text="@string/m3_text_1"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/colorWhite"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.119"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewMA5"

                tools:text="@string/m3_text_1" />

            <EditText
                android:id="@+id/textBoxConsumo"

                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"

                android:inputType="numberDecimal"
                android:textColor="@color/colorWhite"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.495"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewM3_1" />

            <TextView
                android:id="@+id/textViewM5_2"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"

                android:text="@string/m5_text_5"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/colorWhite"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.153"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/radioGroup"

                tools:text="@string/m5_text_5" />

            <EditText
                android:id="@+id/textBoxDeposito"

                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"

                android:inputType="numberDecimal"
                android:textColor="@color/colorWhite"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.495"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewM5_2" />

            <Button
                android:id="@+id/buttonCalcDistCanRec"
                android:layout_width="0dp"
                android:layout_height="46dp"

                android:layout_marginHorizontal="15dp"

                android:layout_marginTop="36dp"

                android:background="@color/colorSecondary"

                android:onClick="calcularDistanciaCanRec"
                android:text="@string/m3_calcular"

                android:textColor="@color/cardview_light_background"
                app:layout_constraintEnd_toEndOf="parent"

                app:layout_constraintHorizontal_bias="0.482"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textBoxDeposito"

                tools:text="@string/m3_calcular" />

            <TextView
                android:id="@+id/emptyTEXT"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginTop="250dp"

                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/colorWhite"
                android:textStyle="italic"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/buttonCalcDistCanRec"
                />

            <RadioGroup
                android:id="@+id/radioGroup"

                android:layout_width="300dp"
                android:layout_height="wrap_content"

                android:orientation="horizontal"

                android:checkedButton="@+id/radioButtonL100KM"

                android:layout_marginTop="26dp"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textBoxConsumo" >

                <RadioButton
                    android:id="@+id/radioButtonL100KM"

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"

                    android:text="@string/m3_l100km"
                    android:textColor="@color/colorWhite"/>

                <RadioButton
                    android:id="@+id/radioButtonKML"

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"

                    android:text="@string/m3_kml"
                    android:textColor="@color/colorWhite"/>

            </RadioGroup>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</ScrollView>



