<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorSecondaryDark"
            tools:context=".MainActivity3">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/m3_text"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@android:color/background_light"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.222"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.023"
                tools:text="@string/m3_text" />

            <TextView
                android:id="@+id/textViewM3_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/m3_text_1"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@android:color/background_light"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.137"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView"
                tools:text="@string/m3_text_1" />

            <EditText
                android:id="@+id/textBoxConsumo"

                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:inputType="numberDecimal"
                android:textColor="@color/cardview_light_background"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.414"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewM3_1" />

            <TextView
                android:id="@+id/textViewM3_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/m3_text_2"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@android:color/background_light"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.137"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textBoxConsumo"
                tools:text="@string/m3_text_2" />

            <EditText
                android:id="@+id/textBoxDistancia"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:textColor="@color/cardview_light_background"
                android:inputType="numberDecimal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.414"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewM3_2" />

            <TextView
                android:id="@+id/textViewM3_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/m3_text_3"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@android:color/background_light"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.137"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textBoxDistancia"
                tools:text="@string/m3_text_3" />

            <EditText
                android:id="@+id/textBoxPrecioSopa"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:textColor="@color/cardview_light_background"
                android:layout_marginTop="15dp"
                android:inputType="numberDecimal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.414"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewM3_3" />

            <Button
                android:id="@+id/buttonCalcPreViaj"
                android:layout_width="300dp"
                android:layout_height="46dp"
                android:layout_marginTop="60dp"
                android:background="@color/colorSecondary"
                android:onClick="calcularPrecioViaje"
                android:text="@string/m3_calcular"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textBoxPrecioSopa"
                tools:text="@string/m3_calcular" />

            <TextView
                android:id="@+id/textViewM3_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:text="@string/m3_text_4"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@android:color/background_light"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.137"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/buttonCalcPreViaj"
                tools:text="@string/m3_text_4" />

            <TextView
                android:id="@+id/textViewM3_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="100dp"
                android:text="@string/m3_text_5"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@android:color/background_light"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.125"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewM3_4"
                tools:text="@string/m3_text_5" />

            <TextView
                android:id="@+id/textViewM3_6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@android:color/background_light"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.125"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewM3_5"
                tools:text="" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</ScrollView>

